# TreeSitterBraneScript

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  extractEnums.py  go.mod  grammar.js  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-branescript.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_branescript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBranescriptTests/: TreeSitterBranescriptTests.swift
genbuild/: parser.exp  parser.lib
genbuild/src/: grammar.json  node-types.json  parser.c
src/: grammar.json  node-types.json  parser.c
