[package]
name = "tree-sitter-branescript"
description = "Parser for BraneScript's text representation"
version = "0.1.0"
authors = ["WireWhiz"]
license = "Apachie 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "branescript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wirewhiz/treesitterbranescript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
