[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-branescript"
description = "Parser for BraneScript's text representation"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "branescript"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "WireWhiz" }]
requires-python = ">=3.9"
license.text = "Apachie 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/wirewhiz/treesitterbranescript"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
